--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net481" />
   <package id="Npgsql" version="7.0.6" targetFramework="net481" />
+  <package id="RestSharp" version="110.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net481" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net481" />
@@ -13,7 +14,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net481" />
-  <package id="System.Text.Json" version="7.0.0" targetFramework="net481" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
   <package id="System.Threading.Channels" version="7.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
