--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,14 +11,20 @@
     <Setting Name="BotToken" Type="System.String" Scope="User">
       <Value Profile="(Default)">6457417713:AAFrqt3BSYdQy3-w73SAXKvrMXGy8btoJ0E</Value>
     </Setting>
-    <Setting Name="TimeoutProcess" Type="System.String" Scope="User">
+    <Setting Name="TimeoutProcess" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
-    <Setting Name="TimeoutVoid" Type="System.String" Scope="User">
+    <Setting Name="TimeoutVoid" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">15</Value>
     </Setting>
     <Setting Name="BotSearchToken" Type="System.String" Scope="User">
       <Value Profile="(Default)">6906986784:AAGWHhFXFQ3YVyu_c0fdJ1v13Pwsn5nbmBg</Value>
+    </Setting>
+    <Setting Name="AgentControl" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="TimeoutReady" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
