команда подписки /sub

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -26,5 +26,14 @@
     <Setting Name="TimeoutReady" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="TokensFor_1_week_sub" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="TokensFor_1_month_sub" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">20</Value>
+    </Setting>
+    <Setting Name="TokensFor_3_day_sub" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
