--- a/App.config
+++ b/App.config
@@ -19,9 +19,6 @@
             <setting name="BotToken" serializeAs="String">
                 <value>6457417713:AAFrqt3BSYdQy3-w73SAXKvrMXGy8btoJ0E</value>
             </setting>
-            <setting name="TimeoutReady" serializeAs="String">
-                <value>2</value>
-            </setting>
             <setting name="TimeoutProcess" serializeAs="String">
                 <value>5</value>
             </setting>
@@ -33,6 +30,18 @@
             </setting>
             <setting name="AgentControl" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="TimeoutReady" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="TokensFor_1_week_sub" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="TokensFor_1_month_sub" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="TokensFor_3_day_sub" serializeAs="String">
+                <value>5</value>
             </setting>
         </StaffCommunity.Properties.Settings>
     </userSettings>
