--- a/App.config
+++ b/App.config
@@ -43,6 +43,9 @@
             <setting name="TokensFor_3_day_sub" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="VerifyEmail" serializeAs="String">
+                <value>True</value>
+            </setting>
         </StaffCommunity.Properties.Settings>
     </userSettings>
   <runtime>
