--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="TokensFor_3_day_sub" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="VerifyEmail" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
