new firebase push

--- a/App.config
+++ b/App.config
@@ -46,6 +46,24 @@
             <setting name="VerifyEmail" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Timeout_D1" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="Timeout_T1" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="Timeout_D2" serializeAs="String">
+                <value>24</value>
+            </setting>
+            <setting name="Timeout_T2" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="Timeout_T3" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="FirebaseJson" serializeAs="String">
+                <value>F:\SaeRest\SaeRest\safire.json</value>
+            </setting>
         </StaffCommunity.Properties.Settings>
     </userSettings>
   <runtime>
@@ -56,7 +74,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.4" newVersion="8.0.0.4" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
