message for agents

--- a/App.config
+++ b/App.config
@@ -13,9 +13,6 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value>Server = localhost; Port = 5432; User Id = postgres; Password = e4r5t6; Database = sae</value>
             </setting>
-            <setting name="UrlApi" serializeAs="String">
-                <value>http://dev-api.staffairlines.com:8033/api</value>
-            </setting>
             <setting name="BotToken" serializeAs="String">
                 <value>6457417713:AAFrqt3BSYdQy3-w73SAXKvrMXGy8btoJ0E</value>
             </setting>
@@ -61,8 +58,14 @@
             <setting name="Timeout_T3" serializeAs="String">
                 <value>4</value>
             </setting>
+            <setting name="UrlApi" serializeAs="String">
+                <value>http://localhost:8880/api</value>
+            </setting>
             <setting name="FirebaseJson" serializeAs="String">
-                <value>F:\SaeRest\SaeRest\safire.json</value>
+                <value>F:\SAEwork\FIREBASE\safire.json</value>
+            </setting>
+            <setting name="ServiceKey" serializeAs="String">
+                <value>64fdg9@w</value>
             </setting>
         </StaffCommunity.Properties.Settings>
     </userSettings>
