Push for agents

--- a/App.config
+++ b/App.config
@@ -67,6 +67,9 @@
             <setting name="ServiceKey" serializeAs="String">
                 <value>64fdg9@w</value>
             </setting>
+            <setting name="PushAgent" serializeAs="String">
+                <value>True</value>
+            </setting>
         </StaffCommunity.Properties.Settings>
     </userSettings>
   <runtime>
